--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Promise generator</title>
   <link rel="stylesheet" href="css/common.css" />
-  <link rel="stylesheet" href="dist/notiflix-3.1.0.min.css" />
+<!--   <link rel="stylesheet" href="dist/notiflix-3.1.0.min.css" /> -->
 </head>
 
 <body>
@@ -29,6 +29,7 @@
 
 
   <script src="js/03-promises.js"></script>
+<!--   <script src="dist/notiflix-3.1.0.min.js"></script> -->
 </body>
 
 </html>
